--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
 <title>ChadiliZe — Telegram Mini App</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
-.claim-btn { background: transparent; border: 0; padding: 0; cursor: pointer; }
-  .claim-btn img { width: 240px; height: auto; filter: drop-shadow(0 8px 24px rgba(0,0,0,.4)); }
-  .rewards-modal.hidden { display:none; }
-  .rewards-modal { position:fixed; inset:0; backdrop-filter: blur(6px); background:rgba(0,0,0,.55); display:flex; align-items:center; justify-content:center; z-index:9999; }
-  .rewards-card { width:min(560px,92vw); border-radius:20px; padding:22px; background:linear-gradient(180deg,#0d1722,#0b121a); border:1px solid #1e2b38; box-shadow:0 20px 60px rgba(0,0,0,.45); color:#e8f0f8; }
-  .rewards-card h2 { margin:0 0 14px; letter-spacing:.4px; }
-  .tier { display:flex; align-items:center; gap:12px; padding:14px; margin:10px 0; border-radius:16px; background:linear-gradient(180deg,#111b26,#0a121a); border:1px solid #1f2a36; }
-  .tier .amount { font-weight:800; }
-  .tier .act { margin-left:auto; display:flex; gap:10px; align-items:center; }
-  .pill { padding:8px 12px; border-radius:999px; background:#0f2131; border:1px solid #1f3447; font-size:12px; opacity:.9 }
-  .btn { padding:10px 14px; border-radius:12px; border:0; cursor:pointer; font-weight:700; }
-  .btn.primary { background:#2bc866; color:#062012; }
-  .btn.gray { background:#223141; color:#a9b9c9; cursor:default; }
-  .tick { width:18px; height:18px; border-radius:50%; background:#2bc866; display:inline-block; }
+ .claim-btn { background: transparent; border: 0; cursor: pointer; }
+  .claim-btn img { height: 48px; width: auto; filter: drop-shadow(0 6px 18px rgba(0,0,0,.35)); }
+  .claim-modal { position: fixed; inset:0; display:flex; align-items:center; justify-content:center;
+                 background: rgba(8,12,18,.65); backdrop-filter: blur(4px); z-index:1000; }
+  .claim-window { width:min(720px,92vw); border-radius:20px; background: linear-gradient(180deg,#0d1720,#0a1219);
+                  border:1px solid #173247; box-shadow: 0 30px 80px rgba(0,0,0,.55); padding:20px 16px; color:#d6e7ff; }
+  .claim-window h2 { margin:0 0 14px 0; font-size:22px; letter-spacing:.3px; }
+  .accent { color:#47f28a; }
+  .tiers { display:flex; flex-direction:column; gap:10px; }
+  .tier { display:flex; justify-content:space-between; align-items:center; padding:12px; border-radius:14px;
+          background: radial-gradient(120% 160% at 0% 0%, rgba(25,91,160,.22), transparent 70%);
+          border:1px solid rgba(64,110,160,.3); }
+  .left .title { font-weight:700; }
+  .left .reward { opacity:.85; font-size:13px; }
+  .right { display:flex; align-items:center; gap:8px; }
+  .right .share { padding:8px 12px; border-radius:10px; border:0; cursor:pointer; background:#2b6cf0; color:white; }
+  .right .claim { padding:8px 12px; border-radius:10px; border:0; cursor:pointer; background:#ffd451; }
+  .right .claim[disabled], .right .share[disabled] { opacity:.5; cursor:not-allowed; }
+  .tick { color:#47f28a; font-weight:900; font-size:18px; }
 /* ===== Overlay + HUD ================================================= */
 .tt-overlay{
   position:fixed; inset:0; display:none; z-index:9999; background:#000;
@@ -1243,17 +1248,54 @@ canvas{ display:block }
         </div>
       </div>
     </div>
-<!-- Place the button somewhere in your UI -->
-<button id="claimRewardsBtn" class="claim-btn">
+<!-- somewhere in your page layout -->
+<button id="btnClaimRewards" class="claim-btn">
   <img src="/img/claimrewards.png" alt="Claim Rewards" />
 </button>
 
-<!-- Modal -->
-<div id="rewardsModal" class="rewards-modal hidden">
-  <div class="rewards-card">
-    <h2>Claim Rewards</h2>
-    <div id="tierRows"></div>
-    <button class="close" onclick="closeRewards()">Close</button>
+<div id="claimModal" class="claim-modal" hidden>
+  <div class="claim-window">
+    <h2>Invite friends, get <span class="accent">CHADS</span></h2>
+
+    <div class="tiers">
+      <div class="tier" data-tier="1">
+        <div class="left">
+          <div class="title">Add a friend</div>
+          <div class="reward">Claim 500,000 chads</div>
+        </div>
+        <div class="right">
+          <button class="share">Invite</button>
+          <button class="claim" disabled>Claim</button>
+          <span class="tick" hidden>✔</span>
+        </div>
+      </div>
+
+      <div class="tier" data-tier="2">
+        <div class="left">
+          <div class="title">Add a friend</div>
+          <div class="reward">Claim 50,000,000 chads</div>
+        </div>
+        <div class="right">
+          <button class="share" disabled>Invite</button>
+          <button class="claim" disabled>Claim</button>
+          <span class="tick" hidden>✔</span>
+        </div>
+      </div>
+
+      <div class="tier" data-tier="3">
+        <div class="left">
+          <div class="title">Add a friend</div>
+          <div class="reward">Claim 3,000,000,000 chads</div>
+        </div>
+        <div class="right">
+          <button class="share" disabled>Invite</button>
+          <button class="claim" disabled>Claim</button>
+          <span class="tick" hidden>✔</span>
+        </div>
+      </div>
+    </div>
+
+    <button id="closeClaim">Close</button>
   </div>
 </div>
 <!-- ===== Test Your Luck (scrolls with page) ===== -->
@@ -1841,102 +1883,182 @@ canvas{ display:block }
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
 <script type="module">
-  import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
+import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-  const SUPABASE_URL = "https://jwrvlaxfrnglaxueqgdx.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3cnZsYXhmcm5nbGF4dWVxZ2R4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYzMDYzOTIsImV4cCI6MjA3MTg4MjM5Mn0.wzW3yQVi5mZOAx8dAmdgLmLOacaPPaxYJv53p_1BIzs";
-  const BOT_USERNAME = "ChadiliZe"; // no @ in links
+const SUPABASE_URL = "https://jwrvlaxfrnglaxueqgdx.supabase.co";
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3cnZsYXhmcm5nbGF4dWVxZ2R4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYzMDYzOTIsImV4cCI6MjA3MTg4MjM5Mn0.wzW3yQVi5mZOAx8dAmdgLmLOacaPPaxYJv53p_1BIzs";
+const BOT_USERNAME = "ChadiliZe"; // no @
 
-  const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  // read Telegram user
-  const tg = window.Telegram?.WebApp;
-  const myTgId = tg?.initDataUnsafe?.user?.id ?? null;
-  const myUsername = tg?.initDataUnsafe?.user?.username ?? null;
+// ——— pull TG id (works in Mini App). Fallback to a querystring ?tg= or saved hint.
+const tg = window.Telegram?.WebApp;
+const params = new URLSearchParams(location.search);
+const TG_ID = Number(
+  tg?.initDataUnsafe?.user?.id ??
+  params.get("tg") ??
+  localStorage.getItem("tg_id_hint") ??
+  0
+);
+if (TG_ID) localStorage.setItem("tg_id_hint", String(TG_ID));
 
-  // your existing local state helpers:
-  // - state.chads is BigInt
-  // - refreshUI(), saveStateLocal(state), showToast(html)
-  // Make sure they exist on window.
+// Your existing state helpers
+const STORAGE_KEY = `chad_state_${params.get('token') || 'guest'}`;
+function loadStateLocal(){
+  try {
+    const raw = localStorage.getItem(STORAGE_KEY);
+    const o = raw ? JSON.parse(raw) : {};
+    return {
+      chads: BigInt(o.chads ?? "0"),
+      gen: BigInt(o.gen ?? "0"),
+      acc: BigInt(o.acc ?? "0"),
+      last: o.last ?? Math.floor(Date.now()/1000),
+      level: o.level ?? 1,
+      purchases: o.purchases ?? {},
+      name: o.name ?? null,
+      avatarIdx: (typeof o.avatarIdx==='number')? o.avatarIdx : null,
+      avatarLocked: !!o.avatarLocked
+    };
+  } catch { return { chads:0n, gen:0n, acc:0n, last:Math.floor(Date.now()/1000), level:1, purchases:{}, name:null, avatarIdx:null, avatarLocked:false }; }
+}
+function saveStateLocal(s){
+  localStorage.setItem(STORAGE_KEY, JSON.stringify({
+    chads: s.chads.toString(), gen: s.gen.toString(), acc: s.acc.toString(),
+    last: s.last, level: s.level, purchases: s.purchases,
+    name: s.name ?? null, avatarIdx: s.avatarIdx ?? null, avatarLocked: !!s.avatarLocked
+  }));
+}
+let state = loadStateLocal();
+function setChadsFromServer(newChads){
+  try {
+    const v = BigInt(String(newChads));
+    state.chads = v;
+    saveStateLocal(state);
+    if (window.refreshUI) window.refreshUI();
+  } catch {}
+}
 
-  const TIERS = [
-    { n:1, reward: 500000,      label:"Add a friend" },
-    { n:2, reward: 50000000,    label:"Add a friend" },
-    { n:3, reward: 3000000000,  label:"Add a friend" },
-  ];
+// ——— Supabase RPC wrappers
+async function rpcCreateInvite(tier){
+  const { data, error } = await supabase.rpc("create_invite", { p_inviter_tg_id: TG_ID, p_tier: tier });
+  if (error) throw error;
+  return data; // reward_invites row
+}
+async function rpcClaim(tier){
+  const { data, error } = await supabase.rpc("claim_reward", { p_inviter_tg_id: TG_ID, p_tier: tier });
+  if (error) throw error;
+  return data && data[0]; // { new_chads, claimed, code }
+}
+async function rpcProgress(){
+  const { data, error } = await supabase.rpc("get_progress", { p_inviter_tg_id: TG_ID });
+  if (error) throw error;
+  return data && data[0];
+}
 
-  async function ensurePlayer() {
-    if (!myTgId) return;
-    await supabase.rpc("upsert_player", { _tg_id: myTgId, _username: myUsername });
-  }
+// ——— UI wiring
+const $ = sel => document.querySelector(sel);
+const modal = $("#claimModal");
+$("#btnClaimRewards").addEventListener("click", async () => {
+  modal.hidden = false;
+  await refreshProgressUI();
+});
+$("#closeClaim").addEventListener("click", ()=> modal.hidden = true);
 
-  function tierRow(tier, status) {
-    const div = document.createElement("div");
-    div.className = "tier";
-    div.innerHTML = `
-      <div>
-        <div>${tier.label}</div>
-        <div class="amount">${tier.reward.toLocaleString()} chads</div>
-      </div>
-      <div class="act">
-        <span class="pill ${status.activated ? '' : 'muted'}">${status.activated ? 'Invited ✓' : 'Invite needed'}</span>
-        ${status.claimed
-          ? '<span class="tick"></span><button class="btn gray" disabled>Claimed</button>'
-          : status.activated
-              ? '<button class="btn primary" data-act="claim">Claim</button>'
-              : '<button class="btn" data-act="send">Send link</button>'}
-      </div>
-    `;
-    // wire up actions
-    div.querySelectorAll("button").forEach(btn => {
-      btn.addEventListener("click", async () => {
-        const act = btn.dataset.act;
-        if (act === "send") {
-          const { data, error } = await supabase.rpc("create_invite", { inviter_tg_id: myTgId, t: tier.n });
-          if (error) return showToast("Couldn’t create invite.");
-          const link = `https://t.me/${BOT_USERNAME}?start=${data.code}`;
-          // open Telegram with the link (user can pick a contact)
-          if (tg?.openTelegramLink) tg.openTelegramLink(link); else window.open(link, "_blank");
-        } else if (act === "claim") {
-          const { data, error } = await supabase.rpc("claim_reward", { inviter_tg_id: myTgId, t: tier.n });
-          if (error) { showToast("Cannot claim yet."); return; }
-          // add locally so UI matches your games’ behavior
-          if (window.state) {
-            window.state.chads = (window.state.chads ?? 0n) + BigInt(tier.reward);
-            if (window.refreshUI) window.refreshUI();
-            if (window.saveStateLocal) window.saveStateLocal(window.state);
-          }
-          showToast(`<span class="accent">+${tier.reward.toLocaleString()}</span> chads added to balance.`);
-          await openRewards(); // refresh rows
-        }
-      });
-    });
-    return div;
-  }
+// build per-tier handlers
+for (const tierEl of document.querySelectorAll(".tier")){
+  const tier = Number(tierEl.dataset.tier);
+  const btnShare = tierEl.querySelector(".share");
+  const btnClaim = tierEl.querySelector(".claim");
+  const tick = tierEl.querySelector(".tick");
 
-  async function renderRows() {
-    const host = document.getElementById("tierRows");
-    host.innerHTML = "";
-    const { data, error } = await supabase.rpc("get_reward_status", { inviter_tg_id: myTgId });
-    const st = error ? [false,false,false,false,false,false] : [
-      data?.tier1_activated, data?.tier1_claimed,
-      data?.tier2_activated, data?.tier2_claimed,
-      data?.tier3_activated, data?.tier3_claimed,
+  btnShare.addEventListener("click", async ()=>{
+    try{
+      const row = await rpcCreateInvite(tier);
+      const code = row.code;
+      // Telegram deep link to your bot with payload. (standard "?start=<payload>")
+      const url = `https://t.me/${BOT_USERNAME}?start=inv-${code}`;
+      if (tg?.openTelegramLink) tg.openTelegramLink(url);
+      else if (navigator.share) await navigator.share({ title:"Play Chadilize", url });
+      else {
+        await navigator.clipboard.writeText(url);
+        toast("Invite link copied!");
+      }
+    }catch(e){ toast("Could not create invite: " + (e?.message||e)); }
+  });
+
+  btnClaim.addEventListener("click", async ()=>{
+    btnClaim.disabled = true;
+    try{
+      const res = await rpcClaim(tier); // { new_chads, claimed, code }
+      if (res?.claimed){
+        setChadsFromServer(res.new_chads);
+        tick.hidden = false;
+        btnShare.disabled = true;
+        btnClaim.disabled = true;
+        // enable the next tier's share button
+        const next = document.querySelector(`.tier[data-tier="${tier+1}"] .share`);
+        if (next) next.disabled = false;
+        toast("Reward claimed! ✅");
+      } else {
+        btnClaim.disabled = false;
+        toast("Not ready to claim yet.");
+      }
+    }catch(e){
+      btnClaim.disabled = false;
+      toast("Claim failed: " + (e?.message||e));
+    }
+  });
+}
+
+// keep buttons in proper state
+async function refreshProgressUI(){
+  try{
+    const p = await rpcProgress(); // booleans for each tier
+    const tiers = [
+      { tier:1, activated: p?.tier1_activated, claimed: p?.tier1_claimed },
+      { tier:2, activated: p?.tier2_activated, claimed: p?.tier2_claimed },
+      { tier:3, activated: p?.tier3_activated, claimed: p?.tier3_claimed },
     ];
-    const byTier = (n)=>({ activated: st[(n-1)*2], claimed: st[(n-1)*2+1] });
 
-    TIERS.forEach(t => host.appendChild(tierRow(t, byTier(t.n))));
-  }
+    let allowInvite = true; // tier 1 share starts enabled
+    for (const t of tiers){
+      const root = document.querySelector(`.tier[data-tier="${t.tier}"]`);
+      const share = root.querySelector(".share");
+      const claim = root.querySelector(".claim");
+      const tick  = root.querySelector(".tick");
 
-  async function openRewards() {
-    await ensurePlayer();
-    await renderRows();
-    document.getElementById("rewardsModal").classList.remove("hidden");
-  }
-  window.closeRewards = ()=> document.getElementById("rewardsModal").classList.add("hidden");
+      share.disabled = !allowInvite;
+      if (t.claimed){
+        share.disabled = true;
+        claim.disabled = true;
+        tick.hidden = false;
+        allowInvite = true; // next tier can be enabled
+      } else {
+        tick.hidden = true;
+        claim.disabled = !t.activated; // yellow claim becomes enabled only after activation
+        allowInvite = t.claimed; // only enable next share when this is claimed
+      }
+    }
+  }catch(e){ console.warn(e); }
+}
 
-  document.getElementById("claimRewardsBtn").addEventListener("click", openRewards);
+// tiny toast
+function toast(msg){
+  if (window.showToast) return window.showToast(msg);
+  console.log(msg);
+}
+
+// if the invited user opens the game via ?start=inv-<code>, activate it automatically
+(function autoActivateFromStart(){
+  const start = params.get("start") || params.get("tgWebAppStartParam");
+  if (!start || !/^inv-/.test(start) || !TG_ID) return;
+  const code = start.replace(/^inv-/, "");
+  supabase.rpc("activate_invite", { p_code: code, p_invitee_tg_id: TG_ID })
+    .then(()=> refreshProgressUI())
+    .catch(()=>{});
+})();
 </script>
+
 <script>
 /* ===== Telegram + loader ===== */
 const tg = window.Telegram?.WebApp ?? null;
